--- a/.github/workflows/manual-build.yml
+++ b/.github/workflows/manual-build.yml
@@ -1,3 +1,7 @@
+name: Manual Trigger Placeholder
 on: workflow_dispatch
 jobs:
-  placeholder:
+  dummy:
+    runs-on: ubuntu-slim # Minimal runner for low footprint
+    steps:
+      - run: echo "Workflow trigger active." # Minimal step
